--- a/CopyBinaries/Source/Setup/Product.wxs
+++ b/CopyBinaries/Source/Setup/Product.wxs
@@ -17,19 +17,14 @@
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
-        <Directory Id="INSTALLFOLDER" Name="Setup" />
+        <Directory Id="INSTALLFOLDER" Name="$(var.InstallationFolder)" />
       </Directory>
     </Directory>
   </Fragment>
 
   <Fragment>
     <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-      <!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
-      <!-- <Component Id="ProductComponent"> -->
-      <!-- TODO: Insert files, registry keys, and other resources here.
-      http://weblogs.sqlteam.com/mladenp/archive/2010/02/11/WiX-3-Tutorial-SolutionProject-structure-and-Dev-resources.aspx
-      -->
-      <!-- </Component> -->
+      <ComponentGroupRef Id="SuperDuperLibrary.Binaries" />
     </ComponentGroup>
   </Fragment>
 </Wix>
