--- a/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/Content/ImageResources.xaml
+++ b/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/Content/ImageResources.xaml
@@ -1,4 +1,4 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/CustomBA;component/Content/Images/logo.png"/>
+    <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/Burn.CustomBA;component/Content/Images/logo.png"/>
 </ResourceDictionary>
