--- a/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/Content/Styles.xaml
+++ b/CustomBurnComplicatedUiOnPureWpf/Source/CustomBA/Content/Styles.xaml
@@ -4,4 +4,20 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Content/ImageResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
+
+    <SolidColorBrush x:Key="CommonBg" Color="#D7CCC8"/>
+
+    <!-- Header -->
+    <Style x:Key="HeaderStyle" TargetType="Grid">
+        <Setter Property="Background" Value="{StaticResource CommonBg}"/>
+        <Setter Property="Height" Value="32"/>
+    </Style>
+
+    <!-- Logo -->
+    <Style x:Key="LogoStyle" TargetType="Image">
+        <Setter Property="Width" Value="32"/>
+        <Setter Property="Height" Value="32"/>
+        <Setter Property="Margin" Value="0,0,12,0"/>
+        <Setter Property="Source" Value="{StaticResource Logo}"/>
+    </Style>
 </ResourceDictionary>
